--- a/style.css
+++ b/style.css
@@ -28,3 +28,12 @@
     font-size: 25px;
 
 }
+
+
+
+@media (max-width:480px){
+    .title_block .title_txt{
+        top: 20%;
+        font-size: 19px;
+    }
+}
