--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .title_img{
@@ -15,6 +16,39 @@
     width: 100%;
     height: 100%;
 }
+
+.route{
+    width: 100%;
+    height: 50px;
+    margin-top: -6px;
+    background-color: rgb(243, 243, 243);
+    display: flex;
+    justify-content: center;
+
+}
+
+.route a{
+    text-decoration: none;
+    color: rgb(42, 170, 221);
+    font-size: 12px;
+    margin-left: 20px;
+    margin-top: 11px;
+}
+
+#about_black{
+    color: black;
+}
+
+.route a h3{
+    font-weight: 400;
+}
+
+.route .icon_arrow{
+    margin-left: 15px;
+    margin-top: 10px;
+}
+
+
 
 
 .title_block .title_txt{
