--- a/style.css
+++ b/style.css
@@ -63,6 +63,50 @@
 
 }
 
+.offering{
+    display: flex;
+    margin: 100px;
+}
+
+.offer_content{
+    margin-left: 50px;
+}
+
+.offer_button button{
+    width:120px;
+    height: 40px;
+    font-size: 14px;
+    font-weight: 400;
+    margin-right: 20px;
+    background-color: white;
+    border: 1px solid rgb(202, 201, 201);
+    color: rgb(179, 174, 174);
+}
+
+.offer_content h3{
+  font-weight: 400;
+  font-size: 25px;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+
+.offer_content p{
+    color: grey;
+    font-size: 16px;
+}
+
+
+ .button_2:focus{
+   display: inline-block;
+}
+
+
+.offer_button button:focus {
+    background-image: linear-gradient(to right top, #1af2e5, #00def1, #00c8f8, #00b0f7, #1296eb);
+    color: white;
+    transition: 1s;
+}
+
 
 
 @media (max-width:480px){
@@ -70,4 +114,44 @@
         top: 20%;
         font-size: 19px;
     }
+
+    .offering{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .offer_button{
+        display: flex;
+        margin-top: 20px;
+        margin-left: -50px;
+    }
+
+    .offer_button button{
+        width:130px;
+        height: 30px;
+        font-size: 8px;
+
+    }
+
 }
+
+
+@media (max-width:960px){
+    .offering{
+        display: flex;
+        flex-direction: column;
+    }
+    .offer_button{
+        display: flex;
+        margin-top: 20px;
+        margin-left: -50px;
+    }
+
+    .offer_button button{
+        width:110px;
+        height: 35px;
+        font-size: 13px;
+    }
+
+}
+
