--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@
     .offering{
         display: flex;
         flex-direction: column;
+        margin: 30px;
     }
 
     .offer_button{
@@ -131,6 +132,10 @@
         height: 30px;
         font-size: 8px;
 
+    }
+
+    #what_do{
+        margin-left: -50px;
     }
 
 }
@@ -152,6 +157,11 @@
         height: 35px;
         font-size: 13px;
     }
+
+    #what_do{
+        margin-left: -50px;
+    }
+
 
 }
 
