--- a/style.css
+++ b/style.css
@@ -107,6 +107,65 @@
     transition: 1s;
 }
 
+.team{
+    height: 100vh;
+    background-color: whitesmoke;
+   
+}
+
+.flex_cart{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+
+.info_cart{
+    width: 360px;
+    height: 390px;
+    margin-top: 70px;
+    border: 3px solid skyblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.team h2{
+    text-align: center;
+    font-size: 55px;
+    font-weight: 300;
+    padding-top: 100px;
+}
+
+.line{
+    border-top: 1px solid rgb(180, 177, 177);
+    height: 1px;
+    width: 130px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.info_cart h3{
+    font-size: 17px;
+    font-weight: 600;
+    color: rgb(177, 176, 176);
+}
+
+.info_cart h1{
+    font-weight: 500;
+    color: rgb(107, 192, 226);
+}
+
+.info_icon a{
+    text-decoration: none;
+    color: rgb(77, 75, 75);
+    margin-left: 8px;
+    margin-right: 8px;
+}
 
 
 @media (max-width:480px){
@@ -145,6 +204,7 @@
     .offering{
         display: flex;
         flex-direction: column;
+        margin: 50px;
     }
     .offer_button{
         display: flex;
