--- a/style.css
+++ b/style.css
@@ -108,8 +108,9 @@
 }
 
 .team{
-    height: 100vh;
+    height: auto;
     background-color: whitesmoke;
+    padding-bottom: 100px;
    
 }
 
@@ -165,6 +166,11 @@
     color: rgb(77, 75, 75);
     margin-left: 8px;
     margin-right: 8px;
+}
+
+.info_cart:hover{
+    margin-top: -10px;
+    transition: 1s;
 }
 
 
