--- a/style.css
+++ b/style.css
@@ -239,6 +239,57 @@
     font-weight: 300;
 }
 
+.clients{
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+    min-height: 100vh;
+    height: auto;
+    background-color: whitesmoke;
+}
+
+.client_cart{
+    height: 350px;
+    width: 550px;
+    background-color: white;
+    padding-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 40px;
+}
+
+.client_detail{
+    display: flex;
+    margin: 40px;
+}
+
+.client_detail img{
+    border-radius: 50px;
+    margin-right: 40px;
+}
+
+.client_cart p{
+    color: rgb(155, 148, 148);
+    font-size: 16px;
+    margin-left: 30px;
+    margin-right: 30px
+}
+
+.client_heading{
+    font-size: 53px;
+    margin-top: 30px;
+    margin-bottom: 80px;
+}
+
+.flex_client{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
 @media (max-width:480px){
     .title_block .title_txt{
         top: 20%;
