--- a/style.css
+++ b/style.css
@@ -77,11 +77,6 @@
     margin-left: 50px;
 }
 
-#buttonf{
-    background-image: linear-gradient(to right top, #1af2e5, #00def1, #00c8f8, #00b0f7, #1296eb);
-    color: white;
-}
-
 .offer_button button{
     width:120px;
     height: 40px;
@@ -320,7 +315,7 @@
 @media (max-width:480px){
 
     .offering img{
-        min-height: 150px;
+        min-height: 100px;
         width: auto;
     }
 
@@ -383,10 +378,16 @@
 }
 
 .client_cart{
-    margin-left: 10px;
-    margin-right: 10px;
-    height: 400px;
+    margin-left: 0px;
+    margin-right: 0px;
+    height: 450px;
     width: 360px;
+}
+
+.offer_button button{
+    width:140px;
+    height: 40px;
+    font-size: 10px;  
 }
 
 
