--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@
 }
 
 .info_cart:hover{
-    margin-top: -10px;
+    margin-top: -5px;
     transition: 1s;
 }
 
@@ -394,6 +394,9 @@
     margin: 50px;
 }
 
+.info_cart:hover{
+    margin-top: 2px;
+}
  
 
 }
