--- a/style.css
+++ b/style.css
@@ -519,6 +519,10 @@
     width: 360px;
 }
 
+.offer_button{
+    margin-right: -20px;
+}
+
 .offer_button button{
     width:160px;
     height: 50px;
